--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <title>전혜수</title>
+        <title>KChat</title>
     </head>
     <body>
-        <p>Hi there!</p>
-        <p>It works!</p>
+        <p>하이~</p>
+        <p>실시간 채팅 + 파일 보내는 웹 구현</p>
     </body>
 </html>
